[gd_scene load_steps=8 format=3 uid="uid://bu5e6u4o61sc0"]

[ext_resource type="Script" path="res://logic/ui.gd" id="1_s2858"]
[ext_resource type="Script" path="res://node/ui/battle.gd" id="2_7dsao"]
[ext_resource type="Script" path="res://node/ui/pause.gd" id="3_cwgbo"]

[sub_resource type="Animation" id="Animation_dvbj0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Battle/BarTop:custom_minimum_size:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [60.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Battle/BarBottom:custom_minimum_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [60.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Battle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ped0u"]
resource_name = "battle_close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Battle/BarTop:custom_minimum_size:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.82843, 1),
"update": 0,
"values": [60.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Battle/BarBottom:custom_minimum_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.82843, 1),
"update": 0,
"values": [60.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Battle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jilgl"]
resource_name = "battle_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Battle/BarTop:custom_minimum_size:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.287174, 1),
"update": 0,
"values": [0.0, 60.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Battle/BarBottom:custom_minimum_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [0.0, 60.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Battle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8715n"]
_data = {
"RESET": SubResource("Animation_dvbj0"),
"battle_close": SubResource("Animation_ped0u"),
"battle_open": SubResource("Animation_jilgl")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_s2858")

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8715n")
}

[node name="Battle" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_7dsao")

[node name="BarTop" type="ColorRect" parent="Battle"]
clip_contents = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Order" type="HBoxContainer" parent="Battle/BarTop"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="Space" type="Control" parent="Battle"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1000.0
mouse_filter = 2

[node name="BarBottom" type="ColorRect" parent="Battle"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Pause" type="TabContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -11.5
offset_right = 4.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
tabs_visible = false
script = ExtResource("3_cwgbo")

[node name="Buttons" type="VBoxContainer" parent="Pause"]
layout_mode = 2

[node name="Continue" type="Button" parent="Pause/Buttons"]
layout_mode = 2
text = "Continue"

[node name="Settings" type="Button" parent="Pause/Buttons"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="Pause/Buttons"]
layout_mode = 2
text = "Save and exit"

[node name="Settings" type="GridContainer" parent="Pause"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="Pause/Settings"]
layout_mode = 2
text = "Master volume"

[node name="MasterVolumeSlider" type="HSlider" parent="Pause/Settings"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="MusicVolumeLabel" type="Label" parent="Pause/Settings"]
layout_mode = 2
text = "Music volume"

[node name="MusicVolumeSlider" type="HSlider" parent="Pause/Settings"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="SfxVolumeLabel" type="Label" parent="Pause/Settings"]
layout_mode = 2
text = "SFX volume"

[node name="SfxVolumeSlider" type="HSlider" parent="Pause/Settings"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[connection signal="hidden" from="Pause" to="Pause" method="set_current_tab" binds= [0]]
[connection signal="pressed" from="Pause/Buttons/Continue" to="Pause" method="hide"]
[connection signal="pressed" from="Pause/Buttons/Settings" to="Pause" method="set_current_tab" binds= [1]]
